--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -1,9 +1,21 @@
-- ec2:
-    key_name: Ec2KK
-    instance_type: t2.micro
-    image: ami-0080e4c5bc078760e
-    wait: yes
-    group: customer
-    count: 1
-    vpc_subnet_id: subnet-30c6526c
-    assign_public_ip: yes
+- name: Create a new Demo EC2 instance
+  hosts: localhost
+  gather_facts: False
+  tasks:
+
+    - name: Create an ec2 instance
+      ec2:
+         key_name: Ec2KK
+         group: ans-slave
+         instance_type: t2.micro
+         image: ami-0080e4c5bc078760e
+         wait: true
+         region: us-east-1
+         count: 1  # default
+         count_tag:
+            Name: customer
+         instance_tags:
+            Name: customer
+         vpc_subnet_id: subnet-30c6526c
+         assign_public_ip: yes
+      register: ec2
