--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -19,3 +19,8 @@
          vpc_subnet_id: subnet-30c6526c
          assign_public_ip: yes
       register: ec2
+    - name: Add the newly created host so that we can further contact it
+      add_host:
+         name: "{{ item.public_ip }}"
+         groups: customer
+         with_items: "{{ ec2.instances }}"
