--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -4,7 +4,7 @@
   tasks:
 
     - name: Create an ec2 instance
-      ec2:
+      local_action: ec2
          key_name: Ec2KK
          group: ans-slave
          instance_type: t2.micro
@@ -19,8 +19,22 @@
          vpc_subnet_id: subnet-30c6526c
          assign_public_ip: yes
       register: ec2
-    - name: Add the newly created host so that we can further contact it
-      add_host:
-         name: "{{ item.public_ip }}"
-         groups: customer
-         with_items: "{{ ec2.instances }}"
+    - name: Add the newly created EC2 instance(s) to the local host group (located inside the directory)
+      local_action: lineinfile 
+                      dest="./hosts" 
+                      regexp={{ item.public_ip }} 
+                      insertafter="[webserver]" line={{ item.public_ip }}
+        with_items: ec2.instances
+     - name: Wait for SSH to come up
+        local_action: wait_for 
+                      host={{ item.public_ip }} 
+                      port=22 
+                      state=started
+        with_items: ec2.instances
+
+      - name: Add tag to Instance(s)
+        local_action: ec2_tag resource={{ item.id }} region={{ region }} state=present
+        with_items: ec2.instances
+        args:
+          tags:
+            Name: webserver
