--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -1,6 +1,6 @@
 ---
   - name: Provision an EC2 Instance
-    hosts: local
+    hosts: all
     connection: local
     gather_facts: False
     tags: provisioning
