--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -23,7 +23,7 @@
                       dest="./hosts" 
                       regexp={{ item.public_ip }} 
                       insertafter="[customer]" line={{ item.public_ip }}
-        with_items: {{ec2.instances}}
+        with_items: "{{ ec2.instances }}"
 
 
       - name: Wait for SSH to come up
@@ -31,11 +31,11 @@
                       host={{ item.public_ip }} 
                       port=22 
                       state=started
-        with_items: {{ec2.instances}}
+        with_items: "{{ ec2.instances }}"
 
       - name: Add tag to Instance(s)
         local_action: ec2_tag resource={{ item.id }} region={{ region }} state=present
-        with_items: {{ec2.instances}}
+        with_items: "{{ ec2.instances }}"
         args:
           tags:
             Name: customer
