--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -34,7 +34,7 @@
         with_items: "{{ ec2.instances }}"
 
       - name: Add tag to Instance(s)
-        local_action: ec2_tag resource={{ item.id }} region={{ region }} state=present
+        local_action: ec2_tag resource={{ item.id }} region="us-east-1" state=present
         with_items: "{{ ec2.instances }}"
         args:
           tags:
