--- a/deployArtifact.yaml
+++ b/deployArtifact.yaml
@@ -1,17 +1,22 @@
---- 
-- 
+---
+-
   hosts: all
-  tasks: 
-    - 
+  tasks:
+    -
+      name: "uninstall Java JRE rpm from a local file"
+      yum:
+        name: "*java*"
+        state: absent
+    -
       name: "install Java JRE rpm from a local file"
-      yum: 
-        name: java
+      yum:
+        name: "*java*1.8*"
         state: present
-    - 
-      copy: 
+    -
+      copy:
         dest: /tmp/.
         src: target/oms-customer-service-0.0.1-SNAPSHOT.jar
       name: "Copy Artifact"
-    - 
+    -
       name: "Run Artifact"
-      shell: "nohup /tmp/oms-customer-service-0.0.1-SNAPSHOT.jar &"
+      shell: nohup java -jar /tmp/oms-customer-service-0.0.1-SNAPSHOT.jar &
