--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -18,12 +18,18 @@
                       count=1
         register: ec2
 
+
+      - name: Touch a host file
+        local_action: file
+                      dest="/tmp/hosts_customer" 
+                      state: present
+ 
+
       - name: Add the newly created EC2 instance(s) to the local host group (located inside the directory)
         local_action: lineinfile 
-                      dest="/tmp/hosts" 
+                      dest="/tmp/hosts_customer" 
                       state: present
                       regexp={{ item.public_ip }} 
-                      insertafter="[customer]" 
                       line={{ item.public_ip }}
         with_items: "{{ ec2.instances }}"
 
