--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=oms-customer-service
 server.port=9090
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/omsdb
-spring.datasource.username = root
-spring.datasource.password = satheesh
+spring.datasource.url = jdbc:mysql://ordermanagement.cqegcgqo6xgl.us-east-1.rds.amazonaws.com:3306/omsdb
+spring.datasource.username = oms
+spring.datasource.password = oms12345
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ## Hibernate Properties
