--- a/createInstance.yaml
+++ b/createInstance.yaml
@@ -9,12 +9,12 @@
 
       - name: Launch the new EC2 Instance
         local_action: ec2 
-                      group=ans-slave 
+                      group=default
                       instance_type=t2.micro 
                       image=ami-0080e4c5bc078760e
                       wait=true 
                       region=us-east-1
-                      keypair=Ec2KK
+                      keypair=Ec2KK2
                       count=1
         register: ec2
       - name: Touch a host file
